# ses_statistics_web

./: Makefile  README.md  ToDo.md  pyproject.toml  requirements.txt
back/: .env  config.py  main.py  psqlClient.py
back_fastapi/: .env  main.py  psqlClient.py
front/: config.py  config.toml  config.yaml  config_reader.py  data_fisher.py  filter_container.py  home_page.py  main.py  map_container.py  settings_page.py  statistics_page.py  table_container.py  upload_page.py
front/models/: db_filter.py  float_columns.py
